# thorvald_description

./: CMakeLists.txt  package.xml
config/thorvald_ii_4wd4ws_std/: thorvald_ii_4wd4ws_std.yaml
launch/: model.launch
urdf/: thorvald_model.xacro
urdf/sensor_modules/: custom_frame.xacro  sensor_frames_example.xacro
