<?xml version="1.0"?>
<package>
  <name>thorvald_description</name>
  <version>2.0.0</version>
  <description>A package for generating Thorvald II model descriptions</description>
  <maintainer email="lgrimstad@sagarobotics.com">Lars Grimstad</maintainer>
  <license>Proprietary</license>
  <author email="lgrimstad@sagarobotics.com">Lars Grimstad</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>xacro</build_depend>



  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>xacro</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
